--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
 # 代理前缀
-VITE_APP_BASE_API = '/prod-api'
+VITE_APP_BASE_API='/prod-api'
+# 本地接口地址
+# VITE_APP_API_URL=http://192.168.1.22:5252/gezhi/
+# 测试接口地址
+# VITE_APP_API_URL=http://gezhiedittest.gezhipro.com/gezhi/
 # 线上接口地址
-VITE_APP_API_URL = http://192.168.1.22:5252/gezhi/
+VITE_APP_API_URL=http://gezhiedit.gezhipro.com/gezhi/
